Switch from base.sha to base.ref
It seems that base.sha is where the repository was when the PR was opened.
Whereas base.ref is the name of the branch for the PR as it is now.

--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     description: |
       This commit will be refetched (to give the merge the best chance of
       succceeding) and used as the base for the merge.
-    default: ${{ github.event.pull_request.base.sha }}
+    default: ${{ github.event.pull_request.base.ref }}
     required: false
   head_ref:
     description: |
