--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
   base_ref:
     description: |
       This commit will be refetched (to give the merge the best chance of
-      succceeding) and used as the base for the merge.
+      succeeding) and used as the base for the merge.
     default: ${{ github.event.pull_request.base.ref }}
     required: false
   head_ref:
